--- a/setup.cfg
+++ b/setup.cfg
@@ -21,4 +21,6 @@ skip=.tox,.git
 [tool:pytest]
 filterwarnings =
     ignore::DeprecationWarning:kombu.utils.compat
-    ignore::DeprecationWarning:nameko.testing.pytest
+    ignore::DeprecationWarning:dns.namedict
+    ignore::DeprecationWarning:dns.hash
+    ignore::DeprecationWarning:nameko.messaging
