we are using a prerelease of nameko

--- a/tox.ini
+++ b/tox.ini
@@ -9,5 +9,6 @@ commands =
     static: pip install pre-commit
     static: make static
 
+    test: pip install --pre nameko
     test: pip install --editable .[dev]
     test: make coverage
