--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,6 +49,10 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
 
+    - name: start rabbitmq
+      run: |
+        docker run -d --rm -p 15672:15672 -p 5672:5672 -p 5671:5671 --name nameko-rabbitmq ghcr.io/nameko/nameko-rabbitmq:3.6.6
+
     - name: install test dependencies
       run: |
         python -m pip install --upgrade pip
