--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -83,6 +83,7 @@ jobs:
 
     - name: generate distributables
       run: |
+        pip install wheel
         python setup.py sdist bdist_wheel
 
     - name: publish to pypi
