--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,5 @@
 repos:
-- repo: git://github.com/pre-commit/pre-commit-hooks
+- repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v1.3.0
   hooks:
   - id: trailing-whitespace
@@ -12,7 +12,7 @@ repos:
   hooks:
   - id: isort
 - repo: https://github.com/ambv/black
-  rev: 19.10b0
+  rev: 22.3.0
   hooks:
   - id: black
 - repo: https://github.com/adrienverge/yamllint.git
